# hermes-plugins

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml  release-gates.yml
integration-tests/: test_asr_offline_runtime.py  test_asr_platform_independence.py  test_git_plugin_install.py  test_vk_live.py
release-corpus/: README.md  baseline.json  manifest.jsonl
spec/2026-07-14-hermes-vk-onnx-asr-plugins/: 2026-07-14-hermes-vk-onnx-asr-plugins-council-brainstorm.md
tools/: asr_corpus_gate.py  check_versions.py
