[project]
name = "hermes-plugins-workspace"
version = "0.0.0"
description = "Development workspace for Hermes VK Community and ONNX ASR plugins"
requires-python = ">=3.11,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyright>=1.1.400",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.0",
    "typer>=0.15.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
target-version = "py311"
extend-exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Conflicts with the formatter.
    "D1",     # Public-docstring coverage is enforced selectively during implementation.
    "EM",     # Exception messages do not need an intermediate variable.
    "FA",     # Python 3.11 is the minimum, so future-annotations enforcement adds noise.
    "RET504", # Named intermediate return values often improve diagnostics.
    "TRY003", # Detailed exception messages are useful at plugin boundaries.
]

[tool.ruff.lint.isort]
known-first-party = [
    "hermes_onnx_asr",
    "hermes_vk_community",
]
no-lines-before = ["standard-library"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/cli.py" = ["T201"] # CLI commands intentionally write user-facing output.
"**/tests/**/*.py" = [
    "PLC0415", # Local imports are useful for dependency and plugin-discovery tests.
    "PLR2004", # Literal protocol values keep contract tests readable.
    "PLR0913", # Contract fixtures often mirror wide upstream call signatures.
    "S101",    # Pytest assertions are intentional.
    "S311",    # Tests may use non-cryptographic random values.
    "SLF001",  # Contract tests need to inspect adapter/provider internals.
]
"integration-tests/**/*.py" = [
    "INP001",
    "PLC0415",
    "PLR2004",
    "PLR0913",
    "S101",
    "S311",
    "SLF001",
]
"*_test.py" = [
    "PLC0415",
    "PLR2004",
    "PLR0913",
    "S101",
    "S311",
    "SLF001",
]
"tools/**/*.py" = ["INP001"]

[tool.pyright]
include = ["."]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
    "spec",
]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingModuleSource = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-config",
    "--strict-markers",
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = [
    "packages/hermes-vk-community/tests",
    "packages/hermes-onnx-asr/tests",
    "integration-tests",
]
xfail_strict = true

[tool.coverage.run]
branch = true
source = [
    "hermes_onnx_asr",
    "hermes_vk_community",
]

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
show_missing = true
skip_covered = true
